--- a/JavaScript_CODE/index.html
+++ b/JavaScript_CODE/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
 </head>
-<script src="./04_object.js"></script>
+<script src="./05_function.js"></script>
 
 <body>
     <h3>JavaScript</h3>
