Added on 22nd April 2024

--- a/MoviesFilterProjects/index.html
+++ b/MoviesFilterProjects/index.html
@@ -10,7 +10,7 @@
   <script src="assets/scripts/objects.js" defer></script>
   <style>
     * {
-      font-family: 'Times New Roman', Times, serif;
+font-family: 'Arial';
       font-size:16px;
     }
   </style>
