--- a/Object Oriented Proramming/index.html
+++ b/Object Oriented Proramming/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mini-Shop</title>
-    <link rel="stylesheet" href="assets/styles/app.css">
-    <script src="assets/scripts/app.js" defer></script>
-  </head> 
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style type="text/css">
+    body {
+      font-family: 'Arial';
+      line-height: 1.2;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div style="display:flex;justify-content:space-around;align-items: center;"><img height="51"
+      src="https://d1k0baiicaeidx.cloudfront.net/Publicis/PUB%20Logos_PUBLICIS%20GROUPE.png" width="53" />
+    <p style="width: 1px;height: 52px;border-right-style: solid;">&nbsp;</p>
+    <img height="51" src="https://d1k0baiicaeidx.cloudfront.net/Publicis/PUB%20Logos_PUBLICIS%20GROUPE.png"
+      width="53" />
+  </div>
+
+  <div style="text-align:center;"><img alt="profile"
+      src="https://d1k0baiicaeidx.cloudfront.net/Publicis/PUB%20Logos_PUBLICIS%20GROUPE.png"
+      style="text-align: center;height:102px;width:87px;" /><br />
+    <b style="font-size:11px;">{{name}}</b>
+  </div>
+
+  <div>
+    <table border="0" cellpadding="" cellspacing="" style="font-weight:bold;width:100%;">
+      <tbody>
+        <tr>
+          <td style="text-align:left;  font-size:10px;"><b>Employee Code</b> &nbsp;&nbsp;
+            :&nbsp;&nbsp;&nbsp;{{emp_code}}
+          </td>
+        </tr>
+        <tr>
+          <td style="text-align:left;font-size:10px;"><b>Blood Group </b>&nbsp;&nbsp; :&nbsp;&nbsp;&nbsp;{{blood_group}}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div style="border-top-style: solid;">
+    <p style="padding-left:30px;font-size:10px;">{{loc_address}}<br />
+      <span style="font-size:10px;"><b>Emergency Contact:{{contact_number}}</b></span>
+    </p>
+  </div>
+
+</body>
+
 </html>
