--- a/JavaScript_CODE/DOM/one.html
+++ b/JavaScript_CODE/DOM/one.html
@@ -8,6 +8,7 @@
         .bg-black {
             background-color: #212121;
             color: #fff;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
     </style>
 </head>
@@ -17,7 +18,6 @@
         <h1 id="heading">DOM learning on Chai aur Code</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, dolor.</p>
     </div>
-
 </body>
 
 </html>
