--- a/JavaScript_CODE/Api_XMLHR/api_request.html
+++ b/JavaScript_CODE/Api_XMLHR/api_request.html
@@ -18,7 +18,7 @@
             if (xhr.readyState === 4) {
                 const Data =JSON.parse(this.responseText);
 
-                console.log(Data.follower);
+                console.log(Data.followers);
             }
         }
 
